change image url to online hosted

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Homepage Image -->
     <div class="image">
         <div class="pitch">
-            Sustainable. Modern. Jewelry. <br>
+            Sustainable. Modern. Elegant. <br>
             Find your style.
         </div>
     </div>
