Text behind background effect

--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
             Sustainable. Modern. Elegant. <br>
             Find your style.
         </div>
+
+        <div class="front-image">
+            
+        </div>
     </div>
 
+  
+
     <!-- Homepage Content -->
-    <div class="content">
+    <div class="content dp">
         <main>
     
         <h1>About Us</h1>
